test/banana/grammar/should_fail/component_cant_be_in_object.banana
a = { b: MyComponent() }
# RAISE ParseSyntaxException